--- a/RayTracing Report-II-Final-V4.ipynb
+++ b/RayTracing Report-II-Final-V4.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "code_folding": [
      32,
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
     }
    ],
    "source": [
-    "#%matplotlib inline\n",
+    "%matplotlib inline\n",
     "fig = plt.figure(figsize=[10, 5]); ax = fig.add_axes([0, 0, 1, 1])\n",
     "Gillam = 56.3480\n",
     "for i in range(89):\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {
     "code_folding": [
      0
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +201,7 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
     "fig, axes = plt.subplots(2,3, figsize=(14,5), sharex = True, sharey = True)\n",
     "fig.tight_layout(pad=4.0)\n",
     "\n",
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +261,7 @@
     }
    ],
    "source": [
-    "\n",
+    "%matplotlib inline\n",
     "fig = plt.figure(figsize=[10, 5])\n",
     "ax = fig.add_axes([0, 0, 1, 1])\n",
     "for i in range(89):\n",
@@ -301,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {
     "code_folding": [
      0,
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "code_folding": [
      0
@@ -1385,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2394,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2403,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {
     "code_folding": [
      6
@@ -2453,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {
     "scrolled": false
    },
@@ -3463,7 +3464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3485,7 +3486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {
     "code_folding": [],
     "scrolled": false
